--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "chai": "4.2.0",
-    "mocha": "6.1.4"
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4"
   }
 }
